# remnawave-routing-updater

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.ru.md  app.py  config.py  docker-compose.yml  logger.py  pyproject.toml  responce_rules.example.json  template.json
.github/workflows/: ci.yml  docker-publish.yml
routing_updater/: __init__.py  __main__.py  checksums.py  config.py  core.py  geobuild.py  healthcheck.py  logger.py  mirror.py  remnawave.py  rules.py  runtime.py  state.py  templating.py
tests/: test_checksums.py  test_core.py  test_geobuild.py  test_healthcheck.py  test_mirror.py  test_rules.py  test_stamp.py  test_templating.py
